--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "awsm-exemple",
-  "version": "0.0.1",
+  "name": "awsm-examples",
+  "version": "0.0.5",
   "description": "AWSM module with basic examples",
   "repository": {
     "type": "git",
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/remicastaing/awsm-examples/issues"
   },
-  "homepage": "https://github.com/remicastaing/awsm-examples#readme"
+  "homepage": "https://github.com/remicastaing/awsm-examples#readme",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
 }
